# task-orchestrator

./: .buildinfo  README.md  README.rst  cli.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js
.github/workflows/: docs.yml  publish.yml  tests.yml
_sources/: cli.rst.txt  index.rst.txt  installation.rst.txt  quickstart.rst.txt
_sources/documentation/: first_task.rst.txt  index.rst.txt  report_gen.rst.txt  task_cond.rst.txt  task_dep.rst.txt  task_priority.rst.txt  task_tagging.rst.txt
docs/: cli.rst  conf.py  index.rst
docs/documentation/: first_task.rst  retry_policy.rst  task_cond.rst  task_dep.rst  task_grouping.rst  task_priority.rst  task_tagging.rst
doctrees/: cli.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree
doctrees/documentation/: first_task.doctree  index.doctree  report_gen.doctree  retry_policy.doctree  task_cond.doctree  task_dep.doctree  task_grouping.doctree  task_priority.doctree  task_tagging.doctree
documentation/: first_task.html  index.html  report_gen.html  retry_policy.html  task_cond.html  task_dep.html  task_grouping.html  task_priority.html  task_tagging.html
examples/: example.py  test.py
html/: .buildinfo  cli.html  genindex.html  index.html  installation.html  objects.inv  searchindex.js
html/_sources/: cli.rst.txt  installation.rst.txt  quickstart.rst.txt
html/documentation/: first_task.html  retry_policy.html  task_dep.html  task_priority.html  task_tagging.html
pravaha/cli/: main.py  (+2 more)
tests/: conftest.py
(+44 files in other folders)
